src/css/map.css
.map {
	width: 100%;
	height: 100%;
	isolation: isolate;
}
.map .note-marker {
	opacity: 0.5;
}
.map .note-marker.active-click,
.map .note-marker.active-hover {
	opacity: 1;
}
.map .note-marker .aura {
	stroke: #0000;
	fill: #0000;
	transition: stroke,fill .5s;
}
.map .note-marker.active-hover .aura {
	stroke: #048;
	fill: #FFF;
}
.map .note-marker.active-click .aura {
	fill: #FC0;
}
.map .note-track {
	vector-effect: non-scaling-stroke;
}
.map .crosshair-overlay {
	position: absolute;
	z-index: 500;
	width: 100%;
	height: 100%;
	display: flex;
	align-items: center;
	justify-content: center;
	pointer-events: none;
}
.map .crosshair-overlay .crosshair {
	height: 15px;
	width: 15px;
}
.map .osm-element-popup-contents {
	--block-gap: .5em;
}
.map .osm-element-popup-contents p,
.map .osm-element-popup-contents figure {
	margin: var(--block-gap) 0;
}
.map .osm-element-popup-contents figure figcaption {
	font-weight: bold;
}
.map .osm-element-popup-contents figure table {
	border: solid 1px var(--frame-color);
	border-spacing: 0;
	border-radius: .25rem;
	width: 100%;
}
.map .osm-element-popup-contents figure tr:not(:first-child) td {
	border-top: solid 1px var(--frame-color);
}
.map .osm-element-popup-contents figure tr td:first-child {
	background: var(--tag-key-background-color);
	border-right: solid 1px var(--frame-color);
}
.map .osm-element-popup-contents button {
	display: block;
	box-sizing: border-box;
	width: 100%;
	margin: var(--block-gap) 0;
}

